@@ -1,1 +1,4 @@
 # interoperability-sdk-java
+
+Run
+- java --enable-preview --enable-native-access=ALL-UNNAMED -Djava.library.path=. src/bhilani/interoperability/jvm/JVMSDKit.java
